fix axis label typo

--- a/missingness-experiments/Interaction-Experiments.ipynb
+++ b/missingness-experiments/Interaction-Experiments.ipynb
@@ -507,7 +507,7 @@
     "plt.title('Unregularized Training Objective vs # Nonzero Coefficients')#\\n (Other than intercept)\n",
     "plt.plot(num_terms_aug[num_terms_aug > 0], objective(train_probs_aug, y_train)[num_terms_aug > 0], label='train calibration, interaction')\n",
     "plt.plot(num_terms_indicator[num_terms_indicator > 0], objective(train_probs_indicator, y_train)[num_terms_indicator > 0], label='train calibration, only indicator')\n",
-    "plt.ylabel('L2 norm of objective on training set')\n",
+    "plt.ylabel('Objective on training set')\n",
     "plt.xlabel('# Nonzero coefficients')\n",
     "\n",
     "plt.legend()"
