Adds most recent version of all nbs

--- a/missingness-experiments/experiment-drafting-missingness.ipynb
+++ b/missingness-experiments/experiment-drafting-missingness.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
        "FitModel({'loss': 'Exponential', 'intercept': True, 'penalty': 'L0L2'})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,51 +534,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5]\n",
-      "[ 0  1  2  3  4  5  6  7  8  9 10]\n"
+     "ename": "TypeError",
+     "evalue": "FitModel.coeff() got an unexpected keyword argument 'support_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Take one model which narrows down to just 10 features, the 40th one.\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# Demonstrate these are the ground truth 10 features, plus an intercept term. \u001b[39;00m\n\u001b[1;32m      3\u001b[0m lambda0 \u001b[38;5;241m=\u001b[39m fit_model_3\u001b[38;5;241m.\u001b[39msupport_size[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m40\u001b[39m]\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mwhere(\u001b[43mfit_model_3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcoeff\u001b[49m\u001b[43m(\u001b[49m\u001b[43msupport_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mlambda0\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtoarray() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1e-8\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mwhere(np\u001b[38;5;241m.\u001b[39mabs(fit_model_3\u001b[38;5;241m.\u001b[39mcoeff(lambda_0\u001b[38;5;241m=\u001b[39mlambda0)\u001b[38;5;241m.\u001b[39mtoarray()) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1e-8\u001b[39m)[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# TODO: formal procedure for selecting which lambda to use? \u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: FitModel.coeff() got an unexpected keyword argument 'support_size'"
      ]
     }
    ],
    "source": [
     "# Take one model which narrows down to just 10 features, the 40th one.\n",
     "# Demonstrate these are the ground truth 10 features, plus an intercept term. \n",
-    "lambda0 = fit_model_3.lambda_0[0][40]\n",
-    "print(np.where(fit_model_3.coeff(lambda_0=lambda0).toarray() > 1e-8)[0])\n",
+    "lambda0 = fit_model_3.support_size[0][40]\n",
+    "print(np.where(fit_model_3.coeff(support_size=lambda0).toarray() > 1e-8)[0])\n",
     "print(np.where(np.abs(fit_model_3.coeff(lambda_0=lambda0).toarray()) > 1e-8)[0])\n",
     "# TODO: formal procedure for selecting which lambda to use? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "FitModel.predict() got an unexpected keyword argument 'support_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m yhat_train \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(\u001b[43mfit_model_3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mXtrain\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msupport_size\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mflatten() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      2\u001b[0m yhat_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(fit_model_3\u001b[38;5;241m.\u001b[39mpredict(Xtest, lambda_0\u001b[38;5;241m=\u001b[39mlambda0)\u001b[38;5;241m.\u001b[39mflatten() \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: FitModel.predict() got an unexpected keyword argument 'support_size'"
+     ]
+    }
+   ],
    "source": [
-    "yhat_train = np.where(fit_model_3.predict(Xtrain, lambda_0=lambda0).flatten() > 0.5, 1, -1)\n",
+    "yhat_train = np.where(fit_model_3.predict(Xtrain, support_size=1).flatten() > 0.5, 1, -1)\n",
     "yhat_test = np.where(fit_model_3.predict(Xtest, lambda_0=lambda0).flatten() > 0.5, 1, -1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.89\n",
-      "0.81\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(np.mean(yhat_train == ytrain))\n",
     "print(np.mean(yhat_test == ytest))\n"
@@ -586,33 +592,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#ground truth test accuracy: \n",
     "np.mean(np.sign(X @ B)[int(n*train_prop):] == ytest )\n",
     "#It seems strange for the model's accuracy to exceed this. \n",
     "#    (TODO: the model's accuracy seems to exceed this fairly often. Investigate why.)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3333333333333333"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.ones(3)\n",
+    "b = np.ones(3)\n",
+    "b[1] = -1\n",
+    "b[2] = 0\n",
+    "np.mean(a == b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "missing_data",
    "language": "python",
-   "name": "python3"
+   "name": "missing_data"
   },
   "language_info": {
    "codemirror_mode": {
@@ -624,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
