Tidy up notebook presentation

--- a/missingness-experiments/interaction-runtime.ipynb
+++ b/missingness-experiments/interaction-runtime.ipynb
@@ -24,6 +24,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfbd4909",
+   "metadata": {},
+   "source": [
+    "#### Define DGP functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 546,
    "id": "6a58072d",
@@ -179,50 +187,6 @@
     "             else np.logical_xor(X[:, self.n_vars], X[:, 1]))\n",
     "        \n",
     "        return true_probs if not self.negation else 1 - true_probs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 549,
-   "id": "dc2c7406",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# class MNAR_arbitrary_op(DGP): #run any operation on X_:0's missingness indicator and X_:1\n",
-    "#     def __init__(self, n_vars=3, operation = lambda mi, x1: np.logical_or(mi, x1)): \n",
-    "#         self.n_vars = n_vars\n",
-    "#         self.operation = operation\n",
-    "        \n",
-    "#     def data_gen(self, n=10000, missingness_prop = 0.4, seed = None): \n",
-    "#         if self.n_vars < 2: \n",
-    "#             print('not enough variables!')\n",
-    "#             return -1, -1, -1, -1\n",
-    "\n",
-    "#         if seed is not None: \n",
-    "#             np.random.seed(seed)\n",
-    "\n",
-    "#         X = np.random.choice([True, False], (n,self.n_vars+1))\n",
-    "\n",
-    "#         #X_:0 is sometimes missing\n",
-    "#         missing_indices = np.random.permutation(n)[:int(missingness_prop*n)]\n",
-    "#         X[missing_indices, 0] = False\n",
-    "#         #last column X_:-1 is missingness indicator for X_:0\n",
-    "#         X[:, -1] = False\n",
-    "#         X[missing_indices, -1] = True\n",
-    "\n",
-    "#         #Y is always X_.1 [logical operator] indicator X_.0 is missing\n",
-    "#         y = self.operation(X[:, -1], X[:, 1])\n",
-    "\n",
-    "#         #create augmented matrix (add interaction terms): \n",
-    "#         X_aug = np.concatenate([X, np.logical_and(X[:, -1].reshape(-1, 1), X[:, 1:-1])], axis=1)\n",
-    "\n",
-    "#         return X_aug, X, y\n",
-    "    \n",
-    "#     def true_probs(self, X): \n",
-    "#         #Y is always X_.1 [logical operator] indicator X_.0 is missing\n",
-    "#         true_probs = self.operation(X[:, self.n_vars], X[:, 1])\n",
-    "        \n",
-    "#         return true_probs"
    ]
   },
   {
