Stashing msot recent files for mar based on Y

--- a/missingness-experiments/fico_gams_many_trials.ipynb
+++ b/missingness-experiments/fico_gams_many_trials.ipynb
@@ -110,9 +110,9 @@
     "            print(f\"Adding missingness to: {df.columns[col]}\")\n",
     "            thresh_col = df.columns[inter_cols[i]]\n",
     "            thresh_mask = df[thresh_col] >= df[thresh_col].quantile(0.6)\n",
-    "            tartget_labels = np.zeros_like(thresh_mask)\n",
-    "            tartget_labels[thresh_mask] = 1\n",
-    "            mask = (targets[:, i] == 1) & (df['PoorRiskPerformance'] == tartget_labels)\n",
+    "            threshold_met = np.zeros_like(thresh_mask)\n",
+    "            threshold_met[thresh_mask] = 1\n",
+    "            mask = (targets[:, i] == 1) & (df['PoorRiskPerformance'] == threshold_met)\n",
     "            df.loc[mask, df.columns[col]] = -10\n",
     "        \n",
     "    elif 'mnar' in added_missingness:\n",
