--- a/missingness-experiments/process_fico.ipynb
+++ b/missingness-experiments/process_fico.ipynb
@@ -618,9 +618,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "missing_data",
    "language": "python",
-   "name": "python3"
+   "name": "missing_data"
   },
   "language_info": {
    "codemirror_mode": {
@@ -632,7 +632,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
