--- a/handling_missing_data/DATA/SYNTHETIC_MAR/generate_synthetic_data.ipynb
+++ b/handling_missing_data/DATA/SYNTHETIC_MAR/generate_synthetic_data.ipynb
@@ -53,8 +53,49 @@
     "    n_informative=N_FEATURES,\n",
     "    n_redundant=0,\n",
     "    random_state=1234\n",
-    ")\n",
-    "          \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adding missingness to column: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### INJECT MAR MISSINGNESS\n",
+    "\n",
+    "added_missingness_num_cols = 1\n",
+    "added_missingness_rate = 0.2\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "target_cols = np.array([0])\n",
+    "inter_cols = np.array([1])\n",
+    "targets = np.random.choice([0, 1], size=(y.shape[0], target_cols.shape[0]), p=[1-added_missingness_rate, added_missingness_rate])\n",
+    "\n",
+    "for i, col in enumerate(target_cols):\n",
+    "    print(f\"Adding missingness to column: {col}\")\n",
+    "    thresh_col = inter_cols[i]\n",
+    "    thresh_mask = x[:, thresh_col] >= np.quantile(x[:, thresh_col], .6)\n",
+    "    tartget_labels = np.zeros_like(thresh_mask)\n",
+    "    tartget_labels[thresh_mask] = 1\n",
+    "    mask = (targets[:, i] == 1) & (y == tartget_labels)\n",
+    "    x[mask, col] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "features_df = pd.DataFrame(x)\n",
     "output_df = pd.DataFrame(y, columns=['output'])\n",
     "data_df = pd.concat([features_df, output_df], axis=1)"
@@ -62,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +345,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
-       "      <td>0.434140</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>-0.646899</td>\n",
        "      <td>-4.025954</td>\n",
        "      <td>1.984308</td>\n",
@@ -389,7 +430,7 @@
        "..        ...       ...       ...       ...       ...       ...       ...   \n",
        "995 -0.764133 -1.328269 -2.195970 -0.668578  3.130584  3.049736 -0.826202   \n",
        "996 -3.792739 -1.555733  3.111561 -3.124815 -5.902222 -4.736217 -1.740016   \n",
-       "997  0.434140 -0.646899 -4.025954  1.984308  1.500070  0.611716  2.074119   \n",
+       "997       NaN -0.646899 -4.025954  1.984308  1.500070  0.611716  2.074119   \n",
        "998 -0.782770  2.148991  0.953576  0.824542 -0.310086 -0.390065 -3.661193   \n",
        "999 -2.378656 -0.845937  1.951183  2.355226  0.691443 -0.579536 -0.754937   \n",
        "\n",
@@ -422,7 +463,7 @@
        "[1000 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
