--- a/handling_missing_data/DATA/BREAST_CANCER/prepare_breast_data.ipynb
+++ b/handling_missing_data/DATA/BREAST_CANCER/prepare_breast_data.ipynb
@@ -2251,9 +2251,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (imputation-venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "imputation-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2265,7 +2265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
