Adds processing code for new datasets

--- a/handling_missing_data/DATA/FICO_MAR/prepare_fico.ipynb
+++ b/handling_missing_data/DATA/FICO_MAR/prepare_fico.ipynb
@@ -239,9 +239,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "obj_det_env_2",
    "language": "python",
-   "name": "python3"
+   "name": "obj_det_env_2"
   },
   "language_info": {
    "codemirror_mode": {
