Support imputation and non-imputation approaches for ADULT dataset

--- a/handling_missing_data/DATA/ADULT/prepare_simplified.ipynb
+++ b/handling_missing_data/DATA/ADULT/prepare_simplified.ipynb
@@ -150,6 +150,7 @@
      "output_type": "stream",
      "text": [
       "------------ workclass ---------------\n",
+      "workclass\n",
       "Private             33906\n",
       "Self-emp-not-inc     3862\n",
       "Local-gov            3136\n",
@@ -158,8 +159,9 @@
       "Federal-gov          1432\n",
       "Without-pay            21\n",
       "Never-worked           10\n",
-      "Name: workclass, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "------------ education ---------------\n",
+      "education\n",
       "HS-grad         15784\n",
       "Some-college    10878\n",
       "Bachelors        8025\n",
@@ -176,8 +178,9 @@
       "5th-6th           509\n",
       "1st-4th           247\n",
       "Preschool          83\n",
-      "Name: education, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "------------ marital-status ---------------\n",
+      "marital-status\n",
       "Married-civ-spouse       22379\n",
       "Never-married            16117\n",
       "Divorced                  6633\n",
@@ -185,8 +188,9 @@
       "Widowed                   1518\n",
       "Married-spouse-absent      628\n",
       "Married-AF-spouse           37\n",
-      "Name: marital-status, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "------------ occupation ---------------\n",
+      "occupation\n",
       "Prof-specialty       6172\n",
       "Craft-repair         6112\n",
       "Exec-managerial      6086\n",
@@ -201,15 +205,16 @@
       "Protective-serv       983\n",
       "Priv-house-serv       242\n",
       "Armed-Forces           15\n",
-      "Name: occupation, dtype: int64\n",
+      "Name: count, dtype: int64\n",
       "------------ relationship ---------------\n",
+      "relationship\n",
       "Husband           19716\n",
       "Not-in-family     12583\n",
       "Own-child          7581\n",
       "Unmarried          5125\n",
       "Wife               2331\n",
       "Other-relative     1506\n",
-      "Name: relationship, dtype: int64\n"
+      "Name: count, dtype: int64\n"
      ]
     }
    ],
@@ -224,7 +229,23 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_1046959/3284974135.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  data['sex'].replace({'Male': 0, 'Female': 1}, inplace=True)\n",
+      "/tmp/ipykernel_1046959/3284974135.py:2: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['sex'].replace({'Male': 0, 'Female': 1}, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "# turn sex into boolean sex=female: encode male with 0 and female with 1 (no other values present in this data)\n",
     "data['sex'].replace({'Male': 0, 'Female': 1}, inplace=True) "
@@ -236,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outdir = Path('.')\n",
+    "outdir = Path('./simplified')\n",
     "outdir.mkdir(exist_ok=True)\n",
     "\n",
     "n_splits = 10\n",
@@ -261,13 +282,6 @@
     "        train_fold.to_csv(outdir / f'devel_{holdout_num}_train_{fold_num}.csv', index=False)\n",
     "        val_fold.to_csv(outdir / f'devel_{holdout_num}_val_{fold_num}.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
