Add support for synthetic missingness added to adult

--- a/handling_missing_data/DATA/ADULT/prepare.ipynb
+++ b/handling_missing_data/DATA/ADULT/prepare.ipynb
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ohe = OneHotEncoder(sparse_output=False, dtype=int)\n"
+    "ohe = OneHotEncoder(sparse=False, dtype=int)\n"
    ]
   },
   {
@@ -1607,7 +1607,7 @@
     "    dummy_df = pd.DataFrame({fl[0]: [fl[1][0]] for fl in factor_levels})\n",
     "    cat_colnames = factors\n",
     "    # building the model for transformations\n",
-    "    ohe = OneHotEncoder(categories=levels, sparse_output=False)\n",
+    "    ohe = OneHotEncoder(categories=levels, sparse=False)\n",
     "    onehot_encoder = ohe.fit(dummy_df)\n",
     "    encoded_colnames = ohe.get_feature_names_out(factors)\n",
     "    # building LabelEncoder dictionary model\n",
