Move fastsparse dependency into notebook demo rather than requirements.

--- a/quickstart.ipynb
+++ b/quickstart.ipynb
@@ -4,6 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Install Packages needed for Demo: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This demo uses the FastSparseGAMs package (https://github.com/interpretml/fastSparse), which needs to be installed for the demo to run. We can do in this notebook by uncommenting and running the below line, then restarting the kernel (comment it out again after running it): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install fastsparsegams==0.1.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### First we generate some simple synthetic data \n",
     "\n",
     "In this dataset, we'll have 5 covariates, and the outcome will simply be whether their sum is above the mean or not. However, we will also add informitive missingness to the first covariate, where missingness will only occur if the label is 1."
@@ -21,11 +44,11 @@
     "import pandas as pd\n",
     "import os\n",
     "import sys\n",
-    "import fastsparsegams\n",
     "sys.path.append(os.getcwd() + \"/missingness-experiments\")\n",
     "sys.path.append(os.getcwd() + \"/missingness-experiments/nature-mice-imputations\")\n",
     "from binarizer import Binarizer \n",
     "from visualization_utils import plot_shape_functions\n",
+    "import fastsparsegams\n",
     "\n",
     "# Generate data\n",
     "np.random.seed(0)\n",
@@ -57,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +119,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train accuracy: 0.9275\n",
-      "Test accuracy: 0.91\n"
+     "ename": "NameError",
+     "evalue": "name 'fastsparsegams' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Using fastsparsegams, we can specify a grid of values for the L0 penalty;\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# each of these will produce a distinct model, so we'll need to specify which one we\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# want to work with later\u001b[39;00m\n\u001b[1;32m      4\u001b[0m lambda_grid \u001b[38;5;241m=\u001b[39m [[\u001b[38;5;241m20\u001b[39m, \u001b[38;5;241m15\u001b[39m, \u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m7.5\u001b[39m, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m1.5\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0.5\u001b[39m, \u001b[38;5;241m0.1\u001b[39m]]\n\u001b[0;32m----> 5\u001b[0m model_aug \u001b[38;5;241m=\u001b[39m \u001b[43mfastsparsegams\u001b[49m\u001b[38;5;241m.\u001b[39mfit(\n\u001b[1;32m      6\u001b[0m     train_aug\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mfloat\u001b[39m), y_train_aug\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m, loss\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExponential\u001b[39m\u001b[38;5;124m\"\u001b[39m, max_support_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m40\u001b[39m, \n\u001b[1;32m      7\u001b[0m     algorithm\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCDPSI\u001b[39m\u001b[38;5;124m\"\u001b[39m, lambda_grid\u001b[38;5;241m=\u001b[39mlambda_grid, num_lambda\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, num_gamma\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m selected_lambda \u001b[38;5;241m=\u001b[39m model_aug\u001b[38;5;241m.\u001b[39mlambda_0[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Run our selected model over the train and test sets\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# This model outputs probabilities, so we threshold them to binary predictions\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'fastsparsegams' is not defined"
      ]
     }
    ],
